Fix vertical alignment

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -28,6 +28,12 @@ a, a:hover, a:active, a:focus, a:visited, a:link {
 	text-decoration: none;
 }
 
+.vert {
+  position: relative;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
 .land {
 	width: 100%;
 	height: 100vh;
@@ -204,7 +210,6 @@ section {
 	}
 
 	h1 {
-		margin-top: 40px;
 		font-size: 30px;
 		margin-bottom: 25px;
 	}
